Add retrieve order method for XML interface
