# application/static/swagger/swagger.json
@@ -109,12 +109,12 @@
         }
       }
     },
-    "/payments/{payment-provider-id}": {
+    "/payments/{order-code}": {
       "get": {
         "tags": [
           "payments"
         ],
-        "summary": "Returns a payment by the given payment provider id",
+        "summary": "Returns a payment by the given order code",
         "operationId": "getPayment",
         "consumes": [
           "application/json"
@@ -125,11 +125,10 @@
         "parameters": [
           {
             "in": "path",
-            "name": "payment-provider-id",
-            "description": "Unique identifier that has been generated by the payment provider",
+            "name": "order-code",
+            "description": "Unique identifier that has been generated for the payment",
             "required": true,
-            "type": "string",
-            "format": "uuid"
+            "type": "string"
           }
         ],
         "responses": {
@@ -346,29 +345,21 @@
     "GetPaymentResponse": {
       "type": "object",
       "properties": {
-        "currencyCodeExponent": {
-          "type": "integer",
-          "example": 2
+        "orderCode": {
+          "type": "string",
+          "example": "OFS-MORE-PAYMENT-01"
+        },
+        "paymentMethod": {
+          "type": "string",
+          "example": "VISA_CREDIT-SSL"
         },
         "creationDate": {
           "type": "string",
-          "example": "2017-12-21T12:42:10.091+0000"
+          "example": "2017-12-21T12:42:10"
         },
-        "modificationDate": {
+        "lastEvent": {
           "type": "string",
-          "example": "2017-12-21T12:42:10.141+0000"
-        },
-        "orderCode": {
-          "type": "string",
-          "example": "a4c34c3c-cf1c-4404-a8fe-8b2d09b18e35"
-        },
-        "token": {
-          "type": "string",
-          "example": "TEST_SU_494d4873-c3d7-4dc6-b012-9925072195a9"
-        },
-        "orderDescription": {
-          "type": "string",
-          "example": "Order description"
+          "example": "CAPTURED"
         },
         "amount": {
           "type": "string",
@@ -377,130 +368,6 @@
         "currencyCode": {
           "type": "string",
           "example": "GBP"
-        },
-        "paymentStatus": {
-          "type": "string",
-          "example": "SUCCESS"
-        },
-        "paymentResponse": {
-          "type": "object",
-          "properties": {
-            "type": {
-              "type": "string",
-              "example": "ObfuscatedCard"
-            },
-            "name": {
-              "type": "string",
-              "example": "cardholder-name"
-            },
-            "expiryMonth": {
-              "type": "string",
-              "example": 2
-            },
-            "expiryYear": {
-              "type": "string",
-              "example": 2020
-            },
-            "cardType": {
-              "type": "string",
-              "example": "MASTERCARD_DEBIT"
-            },
-            "maskedCardNumber": {
-              "type": "string",
-              "example": "**** **** **** 5454"
-            },
-            "cardSchemeType": {
-              "type": "string",
-              "example": "consumer"
-            },
-            "cardSchemeName": {
-              "type": "string",
-              "example": "MCI DEBIT"
-            },
-            "cardIssuer": {
-              "type": "string",
-              "example": "METRO BANK PLC"
-            },
-            "countryCode": {
-              "type": "string",
-              "example": "GB"
-            },
-            "cardClass": {
-              "type": "string",
-              "example": "debit"
-            },
-            "cardProductTypeDescNonContactless": {
-              "type": "string",
-              "example": "Dr MasterCard EEA"
-            },
-            "cardProductTypeDescContactless": {
-              "type": "string",
-              "example": "CL Dr MasterCard EEA"
-            },
-            "prepaid": {
-              "type": "string",
-              "example": "unknown"
-            }
-          }
-        },
-        "customerOrderCode": {
-          "type": "string",
-          "example": "TEST-CODE"
-        },
-        "environment": {
-          "type": "string",
-          "example": "TEST"
-        },
-        "riskScore": {
-          "type": "object",
-          "properties": {
-            "value": {
-              "type": "integer",
-              "example": 1
-            }
-          }
-        },
-        "resultCodes": {
-          "type": "object",
-          "properties": {
-            "avsResultCode": {
-              "type": "string",
-              "example": "NOT_SUPPLIED_BY_SHOPPER"
-            },
-            "cvcResultCode": {
-              "type": "string",
-              "example": "APPROVED"
-            }
-          }
-        },
-        "orderType": {
-          "type": "string",
-          "example": "ECOM"
-        },
-        "history": {
-          "type": "object",
-          "properties": {
-            "modificationDate": {
-              "type": "string",
-              "example": "2017-12-21T12:42:10.151+0000"
-            },
-            "state": {
-              "type": "string",
-              "example": "SUCCESS"
-            },
-            "amount": {
-              "type": "string",
-              "example": 50000
-            },
-            "currencyCode": {
-              "type": "string",
-              "example": "GBP"
-            },
-            "currencyCodeExponent": {
-              "type": "integer",
-              "example": 2
-            }
-          }
         }
       }
     },
